--- a/BucStop/Views/Home/Privacy.cshtml
+++ b/BucStop/Views/Home/Privacy.cshtml
@@ -3,6 +3,7 @@
 }
 
 <!-- Privacy Policy page. Not implemented yet, however, may be useful in the future.-->
+<!-- Test test / Christian->
 
 <h1>@ViewData["Title"]</h1>
 
