fix testing branch for mobile controls

--- a/BucStop/Views/Games/Play.cshtml
+++ b/BucStop/Views/Games/Play.cshtml
@@ -51,7 +51,7 @@
                  that will either have to be tailored for each game or redone.
             -->
 
-            <div id="inputBoxContainer" style="text-align: center;">
+           <!-- <div id="inputBoxContainer" style="text-align: center;">
                 <div id="inputBox" style="display: inline-block; background-color: #f0f0f0; padding: 10px; border-radius: 5px;">
                     <h2>Submit Your Score</h2>
                     <input type="text" id="initials" maxlength="3" placeholder="Initials" style="margin-right: 10px;">
@@ -72,6 +72,7 @@
                     </table>
                 </div>
             </div>
+            -->
             <!-- Pills to view a games author, description, and how to play -->
             <ul class="nav nav-tabs" role="tablist">
                 <li class="nav-item" role="presentation">
