--- a/BucStop/Views/Games/Play.cshtml
+++ b/BucStop/Views/Games/Play.cshtml
@@ -1,6 +1,7 @@
 ﻿@model BucStop.Models.Game
 
 <!-- This is the page every game is embeded into with the js files(in wwwroot folder) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
 <style>
     canvas {
         padding-left: 0;
