--- a/BucStop/Views/Shared/_Layout.cshtml
+++ b/BucStop/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
     <footer class="border-top footer text-muted">
         <div class="container">
 
-            &copy; 2023 - BucStop - <a asp-area="" asp-controller="Home" asp-action="Legal">Legal</a> - <a href="https://github.com/chrisseals98/BOBBY/releases/tag/v2.0.0" style="color:#C6AA76;">Version: 3.2.0</a><a> - </a>
+            &copy; 2024 - BucStop - <a asp-area="" asp-controller="Home" asp-action="Legal">Legal</a> - <a href="https://github.com/PossiblyBobby/4350_002_Fall23_BucStop/blob/Master/README.md" style="color:#C6AA76;">Version: 3.3.2</a><a> - </a>
 
 
         </div>
